--- a/p8105_hw1_ja3314.Rmd
+++ b/p8105_hw1_ja3314.Rmd
@@ -12,29 +12,20 @@ library(tidyverse)
 
 ## Problem 1
 
-*Defining my variables*
-
-```{r}
-vec_numeric = runif(10, min = 0, max = 5)
-vec_logical = c(vec_numeric > 2)
-vec_char = c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j")
-vec_factor = factor(c(1,0,0,1,1,1,0,1,0,0), levels = c(0,1), labels = c("positive", "negative"))
-```
-
-*Creating data frame using variables*
+*Creating data frame*
 
 ```{r}
 uniform_dist_df = tibble(
-  vec_numeric,
-  vec_logical,
-  vec_char,
-  vec_factor,
+  vec_numeric = runif(10, min = 0, max = 5), 
+  vec_logical = c(vec_numeric > 2), 
+  vec_char = c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j"), 
+  vec_factor = factor(c(1,0,0,1,1,1,0,1,0,0), levels = c(0,1), labels = c("positive", "negative"))
 )
 ```
 
 *Calculating the mean of each variable in uniform_dist_df:*
 
-```{r}
+```{r, warning=FALSE}
 summarise_at(uniform_dist_df, c("vec_numeric", "vec_logical", "vec_char", "vec_factor"), mean)
 ```
 
@@ -43,23 +34,70 @@ The mean calculation only works for the numeric and logical vectors. The charact
 *Converting logical, character, and factor vectors into numeric vectors:*
 
 ```{r, eval = FALSE}
-as.numeric(vec_logical)
-as.numeric(vec_char)
-as.numeric(vec_factor)
+as.numeric(uniform_dist_df$vec_logical)
+as.numeric(uniform_dist_df$vec_char)
+as.numeric(uniform_dist_df$vec_factor)
 ```
 
 The logical and factor vector are able to be converted to numeric values but the character vector is not.
 
 *Converting character variable from character to factor to numeric and factor variable from factor to character to numeric*
 
-```{r}
-char_factor_numeric = as.factor(vec_char)
+```{r, warning=FALSE}
+char_factor_numeric = as.factor(uniform_dist_df$vec_char)
 as.numeric(char_factor_numeric)
 
-factor_char_numeric = as.character(vec_factor)
+factor_char_numeric = as.character(uniform_dist_df$vec_factor)
 as.numeric(factor_char_numeric)
 ```
 
 Converting a character vector to a factor vector and then using the `as.numeric` function produces a numeric factor however converting a factor vector to a character vector does not.
 
 
+## Problem 2
+
+Creating data frame:
+
+```{r}
+
+norm_dist_df = tibble(
+  x = rnorm(1000), 
+  y = rnorm(1000), 
+  log_vec = x + y > 0, 
+  num_vec = as.numeric(log_vec), 
+  fac_vec = as.factor(log_vec), 
+)
+```
+
+
+```{r, include=FALSE}
+## Calculating descriptive measures for norm_dist_df
+dim_norm_dist_df = dim(norm_dist_df)
+mean_x = mean(norm_dist_df[["x"]])
+median_x = median(norm_dist_df[["x"]])
+num_true = table(norm_dist_df[["log_vec"]])["TRUE"]
+prop_true = (num_true/1000)
+```
+
+This vector's dimensions are [`r dim_norm_dist_df`]. x has a mean of `r mean_x` and a median of `r median_x`. The proportion of `TRUE` cases in the logical vector is `r prop_true`. 
+
+*Creating scatterplots:*
+
+Color-coded based on logical variable:
+```{r, message=FALSE}
+ggplot(norm_dist_df, aes(x = y, y = x, color = log_vec)) + geom_point()
+
+ggsave("norm_dist_plot.pdf")
+```
+
+Color-coded based on numeric variable:
+```{r}
+ggplot(norm_dist_df, aes(x = y, y = x, color = num_vec)) + geom_point()
+```
+
+Color-coded based on factor variable:
+```{r}
+ggplot(norm_dist_df, aes(x = y, y = x, color = fac_vec)) + geom_point()
+```
+
+Since the values for my logical and factor variables are the same, their plots are also color-coded the same way. Even though the numeric variable only has 2 possible values, the color-coding for the scatterplot is a gradient since there is a potential for more than 2 variables in a numeric vector.
