--- a/p8105_hw1_ja3314.md
+++ b/p8105_hw1_ja3314.md
@@ -4,7 +4,7 @@ p8105\_hw1\_ja3314
 Problem 1
 ---------
 
-*Creating data frame*
+**Creating data frame**
 
 ``` r
 uniform_dist_df = tibble(
@@ -15,7 +15,7 @@ uniform_dist_df = tibble(
 )
 ```
 
-*Calculating the mean of each variable in uniform\_dist\_df:*
+**Calculating the mean of each variable in uniform\_dist\_df:**
 
 ``` r
 summarise_at(uniform_dist_df, c("vec_numeric", "vec_logical", "vec_char", "vec_factor"), mean)
@@ -24,11 +24,11 @@ summarise_at(uniform_dist_df, c("vec_numeric", "vec_logical", "vec_char", "vec_f
     ## # A tibble: 1 x 4
     ##   vec_numeric vec_logical vec_char vec_factor
     ##         <dbl>       <dbl>    <dbl>      <dbl>
-    ## 1        2.20         0.5       NA         NA
+    ## 1        2.30         0.6       NA         NA
 
 The mean calculation only works for the numeric and logical vectors. The character and factor vectors do not contain numeric values and hence a mean cannot be calculated. The logical vector values are coerced to numeric and therefore a value has been calculated.
 
-*Converting logical, character, and factor vectors into numeric vectors:*
+**Converting logical, character, and factor vectors into numeric vectors:**
 
 ``` r
 as.numeric(uniform_dist_df$vec_logical)
@@ -38,7 +38,7 @@ as.numeric(uniform_dist_df$vec_factor)
 
 The logical and factor vector are able to be converted to numeric values but the character vector is not.
 
-*Converting character variable from character to factor to numeric and factor variable from factor to character to numeric*
+**Converting character variable from character to factor to numeric and factor variable from factor to character to numeric**
 
 ``` r
 char_factor_numeric = as.factor(uniform_dist_df$vec_char)
@@ -59,7 +59,7 @@ Converting a character vector to a factor vector and then using the `as.numeric`
 Problem 2
 ---------
 
-Creating data frame:
+**Creating data frame:**
 
 ``` r
 norm_dist_df = tibble(
@@ -71,11 +71,11 @@ norm_dist_df = tibble(
 )
 ```
 
-This vector's dimensions are \[1000, 5\]. x has a mean of -0.0045139 and a median of 0.0145058. The proportion of `TRUE` cases in the logical vector is 0.5.
+This vector's dimensions are \[1000, 5\]. x has a mean of -0.0029985 and a median of -0.0511068. The proportion of `TRUE` cases in the logical vector is 0.502.
 
-*Creating scatterplots:*
+**Creating scatterplots:**
 
-Color-coded based on logical variable:
+*Color-coded based on logical variable:*
 
 ``` r
 ggplot(norm_dist_df, aes(x = y, y = x, color = log_vec)) + geom_point()
@@ -87,7 +87,7 @@ ggplot(norm_dist_df, aes(x = y, y = x, color = log_vec)) + geom_point()
 ggsave("norm_dist_plot.pdf")
 ```
 
-Color-coded based on numeric variable:
+*Color-coded based on numeric variable:*
 
 ``` r
 ggplot(norm_dist_df, aes(x = y, y = x, color = num_vec)) + geom_point()
@@ -95,7 +95,7 @@ ggplot(norm_dist_df, aes(x = y, y = x, color = num_vec)) + geom_point()
 
 ![](p8105_hw1_ja3314_files/figure-markdown_github/unnamed-chunk-8-1.png)
 
-Color-coded based on factor variable:
+*Color-coded based on factor variable:*
 
 ``` r
 ggplot(norm_dist_df, aes(x = y, y = x, color = fac_vec)) + geom_point()
