--- a/p8105_hw1_ja3314.Rmd
+++ b/p8105_hw1_ja3314.Rmd
@@ -6,14 +6,14 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+## Loading the tidyverse package
 library(tidyverse)
 
 ```
 
 ## Problem 1
 
-*Creating data frame*
-
+**Creating data frame**
 ```{r}
 uniform_dist_df = tibble(
   vec_numeric = runif(10, min = 0, max = 5), 
@@ -23,16 +23,14 @@ uniform_dist_df = tibble(
 )
 ```
 
-*Calculating the mean of each variable in uniform_dist_df:*
-
+**Calculating the mean of each variable in uniform_dist_df:**
 ```{r, warning=FALSE}
 summarise_at(uniform_dist_df, c("vec_numeric", "vec_logical", "vec_char", "vec_factor"), mean)
 ```
-
 The mean calculation only works for the numeric and logical vectors. The character and factor vectors do not contain numeric values and hence a mean cannot be calculated. The logical vector values are coerced to numeric and therefore a value has been calculated.
 
-*Converting logical, character, and factor vectors into numeric vectors:*
 
+**Converting logical, character, and factor vectors into numeric vectors:**
 ```{r, eval = FALSE}
 as.numeric(uniform_dist_df$vec_logical)
 as.numeric(uniform_dist_df$vec_char)
@@ -41,7 +39,7 @@ as.numeric(uniform_dist_df$vec_factor)
 
 The logical and factor vector are able to be converted to numeric values but the character vector is not.
 
-*Converting character variable from character to factor to numeric and factor variable from factor to character to numeric*
+**Converting character variable from character to factor to numeric and factor variable from factor to character to numeric**
 
 ```{r, warning=FALSE}
 char_factor_numeric = as.factor(uniform_dist_df$vec_char)
@@ -56,7 +54,7 @@ Converting a character vector to a factor vector and then using the `as.numeric`
 
 ## Problem 2
 
-Creating data frame:
+**Creating data frame:**
 
 ```{r}
 
@@ -81,21 +79,21 @@ prop_true = (num_true/1000)
 
 This vector's dimensions are [`r dim_norm_dist_df`]. x has a mean of `r mean_x` and a median of `r median_x`. The proportion of `TRUE` cases in the logical vector is `r prop_true`. 
 
-*Creating scatterplots:*
+**Creating scatterplots:**
 
-Color-coded based on logical variable:
+*Color-coded based on logical variable:*
 ```{r, message=FALSE}
 ggplot(norm_dist_df, aes(x = y, y = x, color = log_vec)) + geom_point()
 
 ggsave("norm_dist_plot.pdf")
 ```
 
-Color-coded based on numeric variable:
+*Color-coded based on numeric variable:*
 ```{r}
 ggplot(norm_dist_df, aes(x = y, y = x, color = num_vec)) + geom_point()
 ```
 
-Color-coded based on factor variable:
+*Color-coded based on factor variable:*
 ```{r}
 ggplot(norm_dist_df, aes(x = y, y = x, color = fac_vec)) + geom_point()
 ```
