--- a/p8105_hw1_ja3314.md
+++ b/p8105_hw1_ja3314.md
@@ -25,7 +25,7 @@ summarise_at(uniform_dist_df, c("vec_numeric", "vec_logical", "vec_char", "vec_f
     ## # A tibble: 1 x 4
     ##   vec_numeric vec_logical vec_char vec_factor
     ##         <dbl>       <dbl>    <dbl>      <dbl>
-    ## 1        2.03         0.4       NA         NA
+    ## 1        3.07         0.6       NA         NA
 
 The mean calculation only works for the numeric and logical vectors. The character and factor vectors do not contain numeric values and hence a mean cannot be calculated. The logical vector values are coerced to numeric and therefore a value has been calculated.
 
@@ -72,7 +72,7 @@ norm_dist_df = tibble(
 )
 ```
 
-This vector's dimensions are \[1000, 5\]. x has a mean of 0.0196585 and a median of 0.0327154. The proportion of `TRUE` cases in the logical vector is 0.505.
+This vector's dimensions are \[1000, 5\]. x has a mean of 0.0628697 and a median of 0.073864. The proportion of `TRUE` cases in the logical vector is 0.513.
 
 **Creating scatterplots:**
 
